--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,10 @@
 # Supabase
 NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
 NEXT_PUBLIC_SUPABASE_ANON_KEY=your-anon-key
-
-# Optional: For server-side operations
 SUPABASE_SERVICE_ROLE_KEY=your-service-role-key
+
+# Helius API (Solana RPC)
+HELIUS_API_KEY=your-helius-api-key
+
+# Codex API (Trending Tokens)
+CODEX_API_KEY=your-codex-api-key
