--- a/package.json
+++ b/package.json
@@ -10,8 +10,14 @@
   },
   "dependencies": {
     "@codex-data/sdk": "^2.0.0",
+    "@solana/wallet-adapter-base": "^0.9.27",
+    "@solana/wallet-adapter-phantom": "^0.9.28",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/web3.js": "^1.98.4",
     "@supabase/supabase-js": "^2.39.0",
     "framer-motion": "^11.0.0",
+    "graphql": "^16.12.0",
     "next": "14.2.20",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
