--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signal",
-  "version": "1.0.0",
+  "version": "0.6.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -20,7 +20,8 @@
     "graphql": "^16.12.0",
     "next": "14.2.20",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.7.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.0",
