feat: Add API key authentication for scan endpoint (cron job security)

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ HELIUS_API_KEY=your-helius-api-key
 
 # Codex API (Trending Tokens)
 CODEX_API_KEY=your-codex-api-key
+
+# Scan API Key (for cron jobs - generate a random string)
+SCAN_API_KEY=your-secret-scan-key
